--- a/social-media-app/src/main/resources/application.properties
+++ b/social-media-app/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=Xzal
+
+sever.port=8080
+
+spring.datasource.url=jdbc:mysql://localhost:3306/social_media_app
+spring.datasource.username=root
+spring.datasource.password=san2@7277
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+ 
+spring.jpa.hibernate.ddl-auto=update
